# binaryninja_zydis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/binaryninja_zydis/: il.hpp
include/utils/: overload.hpp
src/: library.cpp
src/x86_sema/: main.cpp
